[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Vuong Nguyen <44292934+nkvuong@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-spark = "^0.6.0"
psutil = "^5.8.0"
chispa = "^0.8.2"
pyspark = "^3.1.2"
spark-testing-base = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
